Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-13145

LNet Health: increase transaction timeout

XMLWordPrintable

    • 3
    • 9223372036854775807

      On larger clusters it appears like the current transaction timeout default of 10 seconds is too short and it causes RDMA timeouts.

      The proposal is to increase the timeout to 150s. With a retry count of 3 that would bring the LND timeout to 50s, which was the initial value before health.

            ashehata Amir Shehata (Inactive)
            ashehata Amir Shehata (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: